# repeater

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  README.md  dist-workspace.toml  justfile
.claude/skills/flashcard/: SKILL.md
.claude/skills/flashcard/topics/: README.md  _template.md  sermons.md
.github/workflows/: ci.yaml  release.yml  test.yaml
.sqlx/: query-2cc89311c93ca988458f8861cefa19585ac6820423a88ac78312fadecc780691.json  query-378a2ae459487beef966122ed7373747c5a823e4eff28d006a1d276009062e06.json  query-fcb89bf8aac89391ef6f35f817a21e43c670c2994abb814ea040f0be6d22860e.json
benches/: register_all_cards_bench.rs
docs/: book.toml
docs/src/: SUMMARY.md  card-format.md  commands.md  faq.md  fsrs.md  installation.md  llm-usage.md  media-in-cards.md  quick-start.md  roadmap.md  usage.md
migrations/: 0002_add_version_update.sql
src/: card.rs  check.rs  check_version.rs  cloze_utils.rs  create.rs  crud.rs  drill.rs  error.rs  fsrs.rs  hash.rs  import.rs  lib.rs  llm.rs  main.rs  media.rs  question_utils.rs  stats.rs  utils.rs
src/commands/: check.rs  create.rs  drill.rs
src/crud/: cards.rs  db.rs  version.rs
src/llm/: client.rs  cloze.rs  drill_preprocessor.rs  mod.rs  prompt_user.rs  provider.rs  rephrase.rs  response.rs  secrets.rs
src/notes/: converter.rs  mod.rs  reader.rs
src/parser/: markdown.rs  media.rs  mod.rs  parse_from_file.rs
src/tui/: editor.rs  theme.rs
test_data/: test.md
