[package]
name = "repeat"
version = "0.0.20"
edition = "2024"
repository = "https://github.com/shaankhosla/repeat"
description="Spaced repetition, in your terminal"
homepage = "https://github.com/shaankhosla/repeat"
authors = ["shaankhosla"]

[dependencies]
clap = { version = "4.5.53", features = ["derive"] }
ratatui = "0.30.0"
crossterm = "0.29"
anyhow = "1.0.100"
sqlx = { version = "0.8", features = [ "runtime-tokio-rustls" , "sqlite", "chrono", "macros", "migrate"] }
directories = "6.0.0"
tokio = { version = "1", features = ["rt-multi-thread","macros"]}
blake3 = "1.8.2"
chrono = "0.4.42"
futures = "0.3.31"
ignore = "0.4.25"
pulldown-cmark = { version = "0.13.0", default-features = false }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "register_all_cards_bench"
harness = false

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
